oxiplate-derive/tests/broken/numbers/unexpected-suffix-lowercase.stderr
error: Expected the writ tag to be closed with `_}}`, `-}}`, or `}}`.
 --> tests/broken/numbers/unexpected-suffix-lowercase.rs:4:24
  |
4 | #[oxiplate_inline("{{ 0not_supported }}")]
  |                        ^^^^^^^^^^^^^^^^
